--- a/monitoring/fleet.yaml
+++ b/monitoring/fleet.yaml
@@ -5,60 +5,45 @@ helm:
   chart: rancher-monitoring
   version: 14.5.100
   values:
+    rke2IngressNginx:
+      clients:
+        affinity:
+          podAffinity:
+            requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                - key: component
+                  operator: In
+                  values:
+                  - kube-controller-manager
+              namespaces:
+              - kube-system
+              topologyKey: kubernetes.io/hostname
     grafana:
-      additionalDataSources:
-        - name: "loki"
-          type: "loki"
-          url: "http://loki.loki.svc:3100"
-    prometheusOperator:
+      persistence:
+        accessModes:
+          - ReadWriteOnce
+        storageClassName: longhorn
+        size: 2Gi
+        subPath: null
+        type: pvc
+        annotations: null
+        finalizers: null
+        enabled: true
+
+    prometheus:
       prometheusSpec:
-        resources:
-          requests:
-            cpu: 10m
-diff:
-  comparePatches:
-  - apiVersion: admissionregistration.k8s.io/v1beta1
-    kind: MutatingWebhookConfiguration
-    name: rancher-monitoring-admission
-    operations:
-    - {"op":"remove", "path":"/webhooks"}
-  - apiVersion: admissionregistration.k8s.io/v1beta1
-    kind: ValidatingWebhookConfiguration
-    name: rancher-monitoring-admission
-    jsonPointers:
-    - "/webhooks"
-  - apiVersion: admissionregistration.k8s.io/v1
-    kind: MutatingWebhookConfiguration
-    name: rancher-monitoring-admission
-    operations:
-    - {"op":"remove", "path":"/webhooks"}
-  - apiVersion: admissionregistration.k8s.io/v1
-    kind: ValidatingWebhookConfiguration
-    name: rancher-monitoring-admission
-    jsonPointers:
-    - "/webhooks"    
-  - apiVersion: policy/v1beta1
-    kind: PodSecurityPolicy
-    operations:
-    - {"op":"remove", "path":"/spec/hostIPC"}
-    - {"op":"remove", "path":"/spec/hostNetwork"}
-    - {"op":"remove", "path":"/spec/hostPID"}
-    - {"op":"remove", "path":"/spec/privileged"}
-    - {"op":"remove", "path":"/spec/readOnlyRootFilesystem"}
-  - apiVersion: apps/v1
-    kind: Deployment
-    name: rancher-monitoring-grafana
-    namespace: cattle-monitoring-system
-    operations:
-    - {"op":"remove", "path":"/spec/template/spec/containers/0/env/0/value"}
-  - apiVersion: apps/v1
-    kind: Deployment
-    operations:
-    - {"op":"remove", "path":"/spec/template/spec/hostNetwork"}
-    - {"op":"remove", "path":"/spec/template/spec/nodeSelector"}
-    - {"op":"remove", "path":"/spec/template/spec/priorityClassName"}
-    - {"op":"remove", "path":"/spec/template/spec/tolerations"}
-  - apiVersion: v1
-    kind: ServiceAccount
-    operations:
-    - {"op":"remove", "path":"/imagePullSecrets"}
+        enableAdminAPI: true
+        evaluationInterval: 1m
+        retentionSize: 50GiB
+        scrapeInterval: 1m
+        storageSpec:
+          volumeClaimTemplate:
+            spec:
+              accessModes:
+              - ReadWriteOnce
+              resources:
+                requests:
+                  storage: 2Gi
+              storageClassName: longhorn
+              volumeMode: Filesystem
